<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.stalostech.bl.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl_configuration"
        android:id="@+id/blConfTitle"
        android:textColor="#3c6eab"
        android:layout_weight="1"
        android:textSize="23dp"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Color:"
            android:width="100dp"
            android:id="@+id/ColorLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="60dp"
            android:inputType="number"
            android:id="@+id/color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeColor"
            android:id="@+id/changeColor"
            android:onClick="goToChangeColorActivity" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fps"
                android:width="100dp"
                android:id="@+id/fpsLabel" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fpsValue" />
        </LinearLayout>
        <io.apptik.widget.MultiSlider
            android:id="@+id/fps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:thumbNumber="1"
            app:range1="@drawable/multislider_scrubber_track_holo_light"
            app:drawThumbsApart="true"
            app:scaleMin="5"
            app:scaleMax="45"
            app:scaleStep="1"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelLabel"
            android:width="100dp"
            android:id="@+id/modelLabel" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/model"
            android:layout_weight="1"
            android:hint="@string/model"
            android:entries="@array/model_list" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_enabled"
            android:width="100dp"
            android:id="@+id/thresholdEnabledLabel" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thresholdEnabled"
            android:layout_weight="1"
            android:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threshold"
                android:width="100dp"
                android:id="@+id/thresholdLabel" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/thresholdValue" />
        </LinearLayout>
        <io.apptik.widget.MultiSlider
            android:id="@+id/threshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:thumbNumber="1"
            app:range1="@drawable/multislider_scrubber_track_holo_light"
            app:drawThumbsApart="true"
            app:scaleMin="5"
            app:scaleMax="20"
            app:scaleStep="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update configuration"
            android:id="@+id/updateConfiguration"
            android:layout_weight="1"
            android:onClick="updateConfiguration"/>

    </LinearLayout>

</LinearLayout>
